<resources>
    <string name="app_name">Help Desk</string>
    <string name="title">Smart Discussion Room Help Desk</string>
    <string name="current">no request</string>
    <string name="info">**for IoT project purpose** - Ong Yi Jie RDS2S1G1</string>
    <string name="room1">R01</string>
    <string name="room2">R02</string>
    <string name="room3">R03</string>
    <string name="room4">R04</string>
</resources>